<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.syleiman.comicsviewer.Activities.Folders.ChooseFolderActivity" >
    <item android:id="@+id/action_back"
          android:title="@string/action_back"
          android:icon="@drawable/ic_arrow_back_white_48dp"
          android:orderInCategory="100"
          app:showAsAction="always"/>
    <item android:id="@+id/action_choose"
          android:title="@string/action_choose"
          android:icon="@drawable/ic_check_white_48dp"
          android:orderInCategory="110"
          app:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_close"
          android:title="@string/action_close"
          android:icon="@drawable/ic_clear_white_48dp"
          android:orderInCategory="120"
          app:showAsAction="always"/>
</menu>
