<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_password"
        android:maxLength="25"
        android:layout_marginTop="@dimen/dialog_control_top_margin"
        android:layout_marginLeft="@dimen/dialog_control_left_margin"
        android:layout_marginRight="@dimen/dialog_control_right_margin"
        android:layout_marginBottom="@dimen/dialog_control_bottom_margin"
        android:id="@+id/password"
        android:password="true"
        android:singleLine="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_showPassword"
        android:id="@+id/showPasswordCheckbox"
        android:layout_marginLeft="@dimen/dialog_control_left_margin"
        android:layout_marginRight="@dimen/dialog_control_right_margin"
        android:layout_marginBottom="@dimen/dialog_control_bottom_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_passwordHint"
        android:maxLength="100"
        android:layout_marginTop="@dimen/dialog_control_top_margin"
        android:layout_marginLeft="@dimen/dialog_control_left_margin"
        android:layout_marginRight="@dimen/dialog_control_right_margin"
        android:layout_marginBottom="@dimen/dialog_control_bottom_margin"
        android:id="@+id/passwordHint"
        android:singleLine="true"/>
</LinearLayout>